Fixed Align Left/Right CSS
git-svn-id: https://plugins.svn.wordpress.org/wp-print/trunk@154033 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/print-css.css
+++ b/print-css.css
@@ -67,3 +67,11 @@ HR.Divider {
         display: none;
     }
 }
+.alignleft, div.alignleft {
+	float: left;
+	margin: 10px 10px 5px 0;
+}
+.alignright, div.alignright {
+	float: right;
+	margin: 10px 0 5px 10px;
+}
